--- a/vscode/.vscode/launch.json
+++ b/vscode/.vscode/launch.json
@@ -22,7 +22,7 @@
                     "ignoreFailures": false
                 }
             ],
-            "preLaunchTask": "Compile" // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
+            "preLaunchTask": "build" // 调试会话开始前执行的任务，一般为编译程序。与tasks.json的label相对应
         }
     ]
 }
